# final_project_shiying_lai

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: final_project_shiyinglai.rst  modules.rst
final_project_shiyinglai/: final_project_shiyinglai.py
tests/: test_final_project_shiyinglai.py
