[tool.poetry]
name = "final_project_shiyinglai"
version = "0.1.0"
description = "This is an API client for HAM."
authors = ["Shiying Lai <sl4849@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
