[tool.poetry]
name = "final_project_shiyinglai"
version = "0.1.0"
description = "This is an API client for HAM."
authors = ["Shiying Lai <sl4849@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
urllib3 = "^1.26.2"
requests = "^2.25.1"
matplotlib = "^3.3.3"
datetime = "^4.3"
pillow = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
