[tool.poetry]
name = "final_project_shiyinglai"
version = "2.8.0"
description = "This is an API client for HAM."
authors = ["Shiying Lai <sl4849@columbia.edu>"]
license = "MIT"
readme = "README.md"
documentation = 'https://final-project-shiyinglai.readthedocs.io/en/latest/index.html'
homepage = "https://github.com/QMSS-G5072-2020/final_project_shiying_lai"
repository = "https://github.com/QMSS-G5072-2020/final_project_shiying_lai"


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
urllib3 = "1.23"
requests = "^2.25.1"
matplotlib = "^3.3.3"
datetime = "^4.3"
pillow = "8.0.0"


[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
